[build-system]
requires = [
    "hatchling>=1.3.0",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "ibutsu-utils"
description = "Some command line utilities for Ibutsu"
readme = "README.rst"
license = ""
requires-python = ">=3.12"
authors = [
    { name = "Raoul Snyman", email = "rsnyman@redhat.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "ibutsu-client>=3.1.2",
]
dynamic = [
    "version",
]

[project.scripts]
ibutsu-download = "ibutsu_utils.download:main"
ibutsu-upload = "ibutsu_utils.upload:main"
ibutsu-xmerge = "ibutsu_utils.xmerge:main"

[project.urls]
"Bug Tracker" = "https://github.com/ibutsu/ibutsu-utils/issues"
Homepage = "https://ibutsu-project.org/"
Source = "https://github.com/ibutsu/ibutsu-utils"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/ibutsu_utils",
]

[tool.hatch.build.targets.wheel]
packages = ["ibutsu_utils"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["ibutsu_utils"]
