[metadata]
name = ibutsu-utils
version = 0.0.1
author = Raoul Snyman
author_email = rsnyman@redhat.com
description = Some command line utilities for Ibutsu
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://ibutsu-project.org/
project_urls =
    Bug Tracker = https://github.com/ibutsu/ibutsu-utils/issues
    Source = https://github.com/ibutsu/ibutsu-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    ibutsu-client>=2.2.1
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    ibutsu-xmerge = ibutsu_utils.xmerge:main
    ibutsu-upload = ibutsu_utils.upload:main

[flake8]
max_line_length = 120
